# tracing-subscriber-serde

./: Cargo.toml  README.md
benches/: common.rs  comparison.rs  nonblocking.rs  serialization.rs
examples/: common.rs  main.rs  pprint.rs
src/: event.rs  format.rs  lib.rs  nonblocking.rs  pprint.rs  test_utils.rs  time.rs
src/consumer/: mod.rs  pprint.rs
src/format/: json.rs  messagepack.rs  mod.rs
src/subscriber/: format.rs  mod.rs  serialize.rs
src/writer/: mod.rs  nonblocking.rs
tests/: benches.rs
