[package]
name = "tracing-subscriber-json-full"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ansi_term = "0.12.1"
rtrb = "0.2.0"
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
serde_repr = "0.1.7"
smallvec = { version = "^1.7.0", features = ["union", "serde"] }
smartstring = { version = "^0.2.9", features = ["serde"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["json", "env-filter"] }

[dev-dependencies]
anyhow = "1.0.51"
criterion = "0.3.5"
tracing-appender = "0.2.0"


[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "nonblocking"
harness = false
