[package]
name = "tracing-subscriber-serde"
version = "0.1.0"
edition = "2018"
autoexamples=false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ansi_term = { version = "^0.12", optional = true }
flume = "^0.10"
indexmap = {version = "1.8.0", features = ["serde"] }
rmp = { version = "^0.8", optional = true }
rmp-serde = { version = "^0.15", optional = true }
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
serde_repr = "^0.1"
smallvec = { version = "^1.7", features = ["union", "serde"] }
smartstring = { version = "^0.2", features = ["serde"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["json", "env-filter"] }

[features]
thread_id = []
consumer = ["ansi_term"]
messagepack = ["rmp", "rmp-serde"]

[dev-dependencies]
anyhow = "^1.0"
criterion = "^0.3"
itertools = "^0.10"
tracing-appender = "^0.2"

[[example]]
name = "main"

[[example]]
name = "pprint"
required-features = ["consumer"]

[[bench]]
name = "serialization"
harness = false
required-features = ["messagepack"]

[[bench]]
name = "nonblocking"
harness = false
